added cart system

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,4 +10,7 @@
 
 .container__header__h3 {
   padding: 0px 10px;
+  font-family: "Babylonica", cursive;
+  font-weight: 900;
+  font-size: 20px;
 }
