--- a/src/containers/Products/Products.module.scss
+++ b/src/containers/Products/Products.module.scss
@@ -1,18 +1,26 @@
+.container__products__title{
+  padding: 0px 10px;
+}
 .container__products__grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  row-gap: 10px;
-  column-gap: 10px;
-  margin: 2% 10% 2% 10%;
+  row-gap: 20px;
+  column-gap: 20px;
+  margin: 2% 5% 2% 5%;
   text-align: center;
   font-weight: bold;
+ 
 }
 .container__productCards {
   border: 2px solid rgb(230, 227, 227);
   border-radius: 6px;
 }
+.navlink{
+  text-decoration: none;
+  color: black;
+}
 .container__productCards:hover {
-  box-shadow: 0 0 10px rgb(11, 10, 10);
+  box-shadow: 0 0 10px rgb(54, 52, 52);
   transform: scale(1.02);
 }
 
@@ -20,10 +28,12 @@
   height: 300px;
   width: 100%;
 }
-.container__productCard__name {
-  font-weight: bold;
-}
-.container__productCard__price {
+.container_product_details{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 20px;
+  padding: 0px 15px;
 }
 
 
