--- a/src/containers/Cart/Cart.module.scss
+++ b/src/containers/Cart/Cart.module.scss
@@ -1,6 +1,7 @@
 .container__cart {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .container__cart__contents {
@@ -14,8 +15,8 @@
 }
 
 .container__cart__image {
-  width: 75%;
-  height: 100%;
+  width: 15vw;
+  height: 80%;
   margin: 0%;
   padding: 0%;
 }
